fix nav bar background issue on mobile

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,7 @@
 .nav-item {
     padding-left: .5em;
 }
+
+#navbar-main {
+    background-color: #1e0900;
+}
